# video_frame_viewer

./: .gitignore  AGENT.md  CHANGELOG.md  README.md  cao_2018_main.py  config.dev.yaml  downsample_cao_2018.py  downsample_murat_2018.py  generate_mock_eog.py  main.py  main_debug.py  main_user.py  murat_2018_main.py  pyproject.toml  requirements-dev.txt  requirements.txt
reference/: ear_eog.csv  ear_eog.fif
src/: __init__.py  __main__.py  app.py  cao_2018_gui.py  cli.py  config.py  gui.py  murat_2018_gui.py  time_series.py  utils.py  version.py
src/video_frame_viewer/: __init__.py  __main__.py  app.py  cli.py  gui.py  paths.py  time_series.py
test_data/: ear_eog.csv
test_data/drowsy_driving_raja_processed/S1/: ear_eog.fif
test_data/drowsy_driving_raja_processed/S1/backup/: ear_eog_20251223_213942.csv
tests/: __init__.py  conftest.py  test_annotations.py  test_cao_2018_gui.py  test_config.py  test_time_series.py  test_utils.py  test_video_handler.py
viewer/: annotation_editor.py  annotations.py  app.py  gui.py  time_series.py  utils.py  video_handler.py  video_status.py
